# src/main/java/org/openhospital/smartdoc/modules/documents/rest/DocumentController.java
@@ -23,18 +23,17 @@ public class DocumentController implements IDocumentService {
 		this.service = service;
 	}
 
-	@Override
-	public Page<DocumentResponse> findDocuments(@RequestParam(required = false) UUID personId, @RequestParam(required = false) UUID type, @RequestParam(required = false) Instant fromDate, @RequestParam(required = false) Instant toDate, @RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "20") int size) {
+	public Page<DocumentResponse> findDocuments(@RequestParam(required = false) int personId, @RequestParam(required = false) String type, @RequestParam(required = false) Instant fromDate, @RequestParam(required = false) Instant toDate, @RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "20") int size) {
 		return service.findDocuments(personId, type, fromDate, toDate, page, size);
 	}
 
 	@Override
-	public DocumentResponse findDocumentById(@PathVariable UUID id) {
+	public DocumentResponse findDocumentById(@PathVariable String id) {
 		return service.findDocumentById(id);
 	}
 
 	@Override
-	public ResponseEntity<ByteArrayResource> downloadDocument(@PathVariable UUID id, @RequestParam(defaultValue = "false") boolean attachment) {
+	public ResponseEntity<ByteArrayResource> downloadDocument(@PathVariable String id, @RequestParam(defaultValue = "false") boolean attachment) {
 		return service.downloadDocument(id, attachment);
 	}
 
@@ -45,13 +44,8 @@ public class DocumentController implements IDocumentService {
 	}
 
 	@Override
-	public DocumentResponse updateDocument(@PathVariable UUID id, @RequestPart MultipartFile document, @RequestPart DocumentMetadata metadata) {
-		return service.updateDocument(id, document, metadata);
-	}
-
-	@Override
 	@ResponseStatus(HttpStatus.NO_CONTENT)
-	public void deleteDocument(@PathVariable UUID id) {
+	public void deleteDocument(@PathVariable String id) {
 		service.deleteDocument(id);
 	}
 }
